# TrainingCppZZ3

./: CMakeLists.txt  README.md
include/model/: book.hpp  product.hpp
include/tests/: catch.hpp
src/model/: book.cpp  product.cpp
src/tests/: catch.cpp  main_tests.cpp
